TZ: update app component html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,3 +2,5 @@
 <hr>
 <p>It was raining. The rain has stopped. I wonder if it will rain again.</p>
 <hr/>
+<button type="button" class="btn btn-warning">hello</button>
+
